# ClearCtrl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bench_main.cc  compaction_controller.h  main.cc
include/: compaction_controller.h
logs/: controller-500r-run_config.json  controller-500r.csv  fixed2-500r-run_config.json  fixed2-500r.csv  fixed4-500r-run_config.json  fixed4-500r.csv  fixed6-500r-run_config.json  fixed6-500r.csv
scripts/: fillrandom-baseline.sh  fillrandom-compaction.sh
src/: compaction_controller.cc  metrics.cc  metrics.h  policy.cc  policy.h
tests/: bench.cc
